@@ -254,17 +254,15 @@ format.data.frame <- function(x, ..., justify = "none")
 
 format.AsIs <- function(x, width = 12, ...)
 {
-    if(is.character(x)) return(format.default(x, ...))
-    if(is.null(width)) width = 12L
-    n <- length(x)
-    rvec <- rep.int(NA_character_, n)
-    for(i in seq_len(n)) {
-        y <- x[[i]]
+    if(is.character(x) || (is.atomic(x) && is.matrix(x)))
+	return(format.default(x, ...))
+    if(is.null(width)) width <- 12L
+    rvec <- vapply(x, function(y) {
         ## need to remove class AsIs to avoid an infinite loop.
         cl <- oldClass(y)
         if(m <- match("AsIs", cl, 0L)) oldClass(y) <- cl[-m]
-        rvec[i] <- toString(y, width = width, ...)
-    }
+        toString(y, width = width, ...)
+    }, "")
     ## AsIs might be around a matrix, which is not a class.
     dim(rvec) <- dim(x)
     dimnames(rvec) <- dimnames(x)
